--- a/UnionSquare.iOS/ELA/MeVC/cell/FLTableViewDefultCell.xib
+++ b/UnionSquare.iOS/ELA/MeVC/cell/FLTableViewDefultCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,11 +14,11 @@
             <rect key="frame" x="0.0" y="0.0" width="339" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="339" height="71.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="339" height="72"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YlF-fE-9k2">
-                        <rect key="frame" x="30" y="4" width="279" height="63.5"/>
+                        <rect key="frame" x="30" y="4" width="279" height="64"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="setting_list_arrow_fold" translatesAutoresizingMaskIntoConstraints="NO" id="Tla-dm-jIJ">
                                 <rect key="frame" x="248" y="21" width="22" height="22"/>
@@ -30,18 +28,25 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2md-PY-PLA">
-                                <rect key="frame" x="133" y="23.5" width="13" height="17"/>
+                                <rect key="frame" x="15" y="23.5" width="13" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <switch opaque="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="haS-fT-xsw">
+                                <rect key="frame" x="215" y="16.5" width="51" height="31"/>
+                                <color key="onTintColor" red="0.52544218301773071" green="0.52552098035812378" blue="0.52542495727539062" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="thumbTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </switch>
                         </subviews>
-                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.29999999999999999" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.19284453988075256" green="0.32548019289970398" blue="0.32934954762458801" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Tla-dm-jIJ" firstAttribute="centerY" secondItem="YlF-fE-9k2" secondAttribute="centerY" id="HIp-Bj-UEW"/>
+                            <constraint firstItem="2md-PY-PLA" firstAttribute="leading" secondItem="YlF-fE-9k2" secondAttribute="leading" constant="15" id="Leh-Nf-eNe"/>
                             <constraint firstAttribute="trailing" secondItem="Tla-dm-jIJ" secondAttribute="trailing" constant="9" id="Lve-Ju-IF8"/>
+                            <constraint firstItem="haS-fT-xsw" firstAttribute="centerY" secondItem="YlF-fE-9k2" secondAttribute="centerY" id="Qvv-au-k7r"/>
+                            <constraint firstAttribute="trailing" secondItem="haS-fT-xsw" secondAttribute="trailing" constant="15" id="d8R-hZ-9Gf"/>
                             <constraint firstItem="2md-PY-PLA" firstAttribute="centerY" secondItem="YlF-fE-9k2" secondAttribute="centerY" id="lDZ-5Z-xLY"/>
-                            <constraint firstItem="2md-PY-PLA" firstAttribute="centerX" secondItem="YlF-fE-9k2" secondAttribute="centerX" id="x8k-8r-lil"/>
                         </constraints>
                     </view>
                 </subviews>
@@ -57,6 +62,7 @@
             <connections>
                 <outlet property="bgView" destination="YlF-fE-9k2" id="CLp-Ab-kNU"/>
                 <outlet property="nameLab" destination="2md-PY-PLA" id="h82-hV-iBx"/>
+                <outlet property="pwdSwitch" destination="haS-fT-xsw" id="Uzh-pf-gVa"/>
                 <outlet property="subImag" destination="Tla-dm-jIJ" id="PQX-9i-CDq"/>
             </connections>
             <point key="canvasLocation" x="42.399999999999999" y="67.466266866566727"/>
