--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/cell/HMWmyVoteStatisticsTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/cell/HMWmyVoteStatisticsTableViewCell.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,17 +14,29 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLJ-rh-qSW">
-                        <rect key="frame" x="16" y="11" width="144" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No.100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLJ-rh-qSW">
+                        <rect key="frame" x="15" y="11" width="43" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="43" id="2zW-Nb-JW2"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGy-Gl-lWh">
-                        <rect key="frame" x="160" y="11" width="144" height="22"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1000000Votes" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BGy-Gl-lWh">
+                        <rect key="frame" x="216" y="11" width="89" height="22"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="89" id="NMQ-Bc-6Sv"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aRf-wH-iCq">
+                        <rect key="frame" x="73" y="22" width="0.0" height="0.0"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
@@ -35,10 +46,11 @@
                 <constraints>
                     <constraint firstItem="aLJ-rh-qSW" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="3CU-au-Mqv"/>
                     <constraint firstItem="BGy-Gl-lWh" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="AOc-9b-cBc"/>
+                    <constraint firstItem="BGy-Gl-lWh" firstAttribute="centerY" secondItem="aLJ-rh-qSW" secondAttribute="centerY" id="IAa-Kv-ZVu"/>
+                    <constraint firstItem="aRf-wH-iCq" firstAttribute="leading" secondItem="aLJ-rh-qSW" secondAttribute="trailing" constant="15" id="Ndv-Bt-sqp"/>
                     <constraint firstItem="BGy-Gl-lWh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Suv-qR-3da"/>
-                    <constraint firstItem="BGy-Gl-lWh" firstAttribute="leading" secondItem="aLJ-rh-qSW" secondAttribute="trailing" id="YEi-Wb-YU6"/>
+                    <constraint firstItem="aRf-wH-iCq" firstAttribute="centerY" secondItem="aLJ-rh-qSW" secondAttribute="centerY" id="Us7-QS-HvM"/>
                     <constraint firstItem="aLJ-rh-qSW" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="cd3-D2-bEN"/>
-                    <constraint firstItem="BGy-Gl-lWh" firstAttribute="width" secondItem="aLJ-rh-qSW" secondAttribute="width" id="dni-Rg-Qnd"/>
                     <constraint firstAttribute="trailingMargin" secondItem="BGy-Gl-lWh" secondAttribute="trailing" id="fQP-4G-VDM"/>
                     <constraint firstItem="aLJ-rh-qSW" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="lZy-oY-kkm"/>
                 </constraints>
@@ -47,8 +59,10 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="leftLab" destination="aLJ-rh-qSW" id="LvA-gH-sO3"/>
+                <outlet property="middleLabel" destination="aRf-wH-iCq" id="JoR-f5-ZXE"/>
                 <outlet property="rightLab" destination="BGy-Gl-lWh" id="sav-It-jRk"/>
             </connections>
+            <point key="canvasLocation" x="139" y="155"/>
         </tableViewCell>
     </objects>
 </document>
