--- a/UnionSquare.iOS/ELA/MeVC/HWMAccordingPersonalInformationViewController.xib
+++ b/UnionSquare.iOS/ELA/MeVC/HWMAccordingPersonalInformationViewController.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,10 +15,32 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="R8J-Um-dRy">
+                    <rect key="frame" x="157" y="99" width="100" height="100"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="Pgs-gQ-wym"/>
+                        <constraint firstAttribute="width" constant="100" id="o0j-CP-DDb"/>
+                    </constraints>
+                </imageView>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zrh-Ox-Pmt">
+                    <rect key="frame" x="0.0" y="209" width="414" height="653"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                </tableView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="Zrh-Ox-Pmt" secondAttribute="trailing" id="3T6-Fy-Do2"/>
+                <constraint firstItem="Zrh-Ox-Pmt" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="HeD-lP-6UV"/>
+                <constraint firstItem="R8J-Um-dRy" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="NLw-8J-DTf"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="Zrh-Ox-Pmt" secondAttribute="bottom" id="XwA-HK-8vM"/>
+                <constraint firstItem="Zrh-Ox-Pmt" firstAttribute="top" secondItem="R8J-Um-dRy" secondAttribute="bottom" constant="10" id="huX-JJ-Pmt"/>
+                <constraint firstItem="R8J-Um-dRy" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="55" id="jpq-Zy-ONS"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="139" y="154"/>
         </view>
     </objects>
 </document>
