--- a/UnionSquare.iOS/ELA/MeVC/cell/HWMCreateDIDListTableViewCell.xib
+++ b/UnionSquare.iOS/ELA/MeVC/cell/HWMCreateDIDListTableViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,16 +42,26 @@
                                     <constraint firstAttribute="height" constant="1" id="B9C-Px-oUN"/>
                                 </constraints>
                             </view>
+                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.0" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gOK-4y-7cM">
+                                <rect key="frame" x="0.0" y="0.0" width="268" height="43"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="eWo-JO-KT3" secondAttribute="trailing" id="1Od-zg-y5g"/>
                             <constraint firstItem="3G4-FT-q9P" firstAttribute="centerY" secondItem="nRr-Y7-CyC" secondAttribute="centerY" id="8Do-Za-dbN"/>
+                            <constraint firstItem="gOK-4y-7cM" firstAttribute="leading" secondItem="nRr-Y7-CyC" secondAttribute="leading" id="91T-SN-2Jh"/>
                             <constraint firstItem="Jin-bu-wGR" firstAttribute="leading" secondItem="nRr-Y7-CyC" secondAttribute="leading" id="Evp-Ac-A1b"/>
                             <constraint firstAttribute="bottom" secondItem="eWo-JO-KT3" secondAttribute="bottom" id="GYn-UY-fOp"/>
                             <constraint firstItem="Jin-bu-wGR" firstAttribute="top" secondItem="nRr-Y7-CyC" secondAttribute="top" id="GpK-xA-jbZ"/>
+                            <constraint firstItem="eWo-JO-KT3" firstAttribute="top" secondItem="gOK-4y-7cM" secondAttribute="bottom" id="QCN-5e-K8d"/>
                             <constraint firstAttribute="trailing" secondItem="3G4-FT-q9P" secondAttribute="trailing" id="Ycy-u5-9tn"/>
+                            <constraint firstItem="gOK-4y-7cM" firstAttribute="top" secondItem="nRr-Y7-CyC" secondAttribute="top" id="aaB-NL-Hzz"/>
                             <constraint firstAttribute="bottom" secondItem="Jin-bu-wGR" secondAttribute="bottom" id="cZF-PY-14S"/>
+                            <constraint firstItem="3G4-FT-q9P" firstAttribute="leading" secondItem="gOK-4y-7cM" secondAttribute="trailing" id="fxC-KK-CG1"/>
                             <constraint firstItem="eWo-JO-KT3" firstAttribute="leading" secondItem="nRr-Y7-CyC" secondAttribute="leading" id="nuJ-eX-icr"/>
                             <constraint firstItem="3G4-FT-q9P" firstAttribute="leading" secondItem="Jin-bu-wGR" secondAttribute="trailing" constant="15" id="tRH-xw-33e"/>
                         </constraints>
@@ -69,6 +79,7 @@
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
                 <outlet property="arrowImageView" destination="3G4-FT-q9P" id="spg-jA-NrD"/>
+                <outlet property="infoLabel" destination="gOK-4y-7cM" id="NHh-YI-Bay"/>
                 <outlet property="intPutTextField" destination="Jin-bu-wGR" id="a5O-Vn-KMV"/>
             </connections>
             <point key="canvasLocation" x="139" y="119"/>
