--- a/UnionSquare.iOS/ELA/MeVC/AboutELAWalletViewController.xib
+++ b/UnionSquare.iOS/ELA/MeVC/AboutELAWalletViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -27,26 +25,26 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="当前版本号 1.0.0.5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tpO-Zv-m0J">
-                    <rect key="frame" x="0.0" y="219" width="414" height="13.666666666666657"/>
+                    <rect key="frame" x="0.0" y="199" width="414" height="13.666666666666657"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" red="0.45306515693664551" green="0.56444615125656128" blue="0.57758373022079468" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="wallet_ela_logo" translatesAutoresizingMaskIntoConstraints="NO" id="eYh-Fb-tur">
-                    <rect key="frame" x="159" y="80" width="96" height="128"/>
+                    <rect key="frame" x="159" y="60" width="96" height="128"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="128" id="6ju-j8-nW2"/>
                         <constraint firstAttribute="width" constant="96" id="Fog-LR-n6i"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ELAWallet是安全、便捷的专业亦来云SPV轻节点客户端钱包，支持亦来云全生态数字资产。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="act-2a-YJc">
-                    <rect key="frame" x="40" y="272.66666666666669" width="334" height="33.666666666666686"/>
+                    <rect key="frame" x="40" y="252.66666666666666" width="334" height="33.666666666666657"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avu-Ok-fmF">
-                    <rect key="frame" x="63" y="425.33333333333331" width="288" height="40"/>
+                    <rect key="frame" x="63" y="405.33333333333331" width="288" height="40"/>
                     <color key="backgroundColor" red="0.25557887554168701" green="0.37642312049865723" blue="0.40774798393249512" alpha="0.70112537202380953" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="ubt-sr-MVF"/>
@@ -66,7 +64,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cDe-Qv-xPy">
-                    <rect key="frame" x="206.66666666666666" y="515.33333333333337" width="1" height="12"/>
+                    <rect key="frame" x="206.66666666666666" y="495.33333333333331" width="1" height="12"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="12" id="Dt2-zM-KTG"/>
@@ -74,7 +72,7 @@
                     </constraints>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2qn-3m-UkR">
-                    <rect key="frame" x="99.666666666666686" y="501.33333333333326" width="107" height="40"/>
+                    <rect key="frame" x="99.666666666666686" y="481.33333333333331" width="107" height="39.999999999999943"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="107" id="TSU-i5-1iz"/>
                         <constraint firstAttribute="height" constant="40" id="oct-OQ-c2P"/>
@@ -88,7 +86,7 @@
                     </connections>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ej2-cn-wpB">
-                    <rect key="frame" x="207.66666666666663" y="501.33333333333326" width="107" height="40"/>
+                    <rect key="frame" x="207.66666666666663" y="481.33333333333331" width="107" height="39.999999999999943"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="107" id="ZR7-Qy-lnX"/>
                         <constraint firstAttribute="height" constant="40" id="ptH-FE-cLB"/>
@@ -127,6 +125,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="avu-Ok-fmF" secondAttribute="trailing" constant="63" id="zdV-zz-oXT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
+            <point key="canvasLocation" x="139" y="135"/>
         </view>
     </objects>
     <resources>
