--- a/UnionSquare.iOS/ELA/MeVC/HWMVUpdateLogWebViewController.xib
+++ b/UnionSquare.iOS/ELA/MeVC/HWMVUpdateLogWebViewController.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,32 +23,36 @@
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </webView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="n57-Zg-m8u">
-                    <rect key="frame" x="10" y="44" width="50" height="50"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LWr-VG-0Ic">
+                    <rect key="frame" x="15" y="44" width="34" height="62"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="50" id="duP-sS-rOC"/>
-                        <constraint firstAttribute="width" constant="50" id="yo7-XL-XtH"/>
+                        <constraint firstAttribute="width" constant="34" id="6K1-jk-YQq"/>
+                        <constraint firstAttribute="height" constant="62" id="hml-Ze-lTm"/>
                     </constraints>
-                    <state key="normal" title="Button" image="back_arrow_black"/>
+                    <state key="normal" image="back"/>
                     <connections>
-                        <action selector="backVC:" destination="-1" eventType="touchUpInside" id="tGG-IX-N4f"/>
+                        <action selector="backVC:" destination="-1" eventType="touchUpInside" id="V1k-wr-xxu"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="n57-Zg-m8u" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="8Wl-Jp-2zs"/>
+                <constraint firstItem="dEx-2H-sYT" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="08b-ae-LHB"/>
+                <constraint firstItem="dEx-2H-sYT" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="1Ex-lE-ezu"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="dEx-2H-sYT" secondAttribute="trailing" id="Dvb-PM-ewH"/>
+                <constraint firstItem="dEx-2H-sYT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="Dyj-cT-KKJ"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="dEx-2H-sYT" secondAttribute="bottom" id="HHU-DR-745"/>
+                <constraint firstItem="dEx-2H-sYT" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="IQv-wf-Aat"/>
                 <constraint firstItem="dEx-2H-sYT" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="cSt-ka-OKh"/>
+                <constraint firstItem="LWr-VG-0Ic" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="15" id="eAq-KC-H5w"/>
                 <constraint firstItem="dEx-2H-sYT" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="iJ2-Qw-B61"/>
-                <constraint firstItem="n57-Zg-m8u" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="10" id="yeS-Rk-CBU"/>
+                <constraint firstItem="LWr-VG-0Ic" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="wel-rS-y7j"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="50.724637681159422" y="35.491071428571423"/>
         </view>
     </objects>
     <resources>
-        <image name="back_arrow_black" width="22" height="22"/>
+        <image name="back" width="8.5" height="15.5"/>
     </resources>
 </document>
