--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWvotingRulesView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWvotingRulesView.xib
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="投票规则" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Gs-fT-WjF">
-                    <rect key="frame" x="154.5" y="203" width="66" height="16"/>
+                    <rect key="frame" x="154.5" y="183" width="66" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="L7L-oh-g1j"/>
                     </constraints>
@@ -24,21 +23,8 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kKz-bX-ufG">
-                    <rect key="frame" x="319" y="39" width="50" height="50"/>
-                    <constraints>
-                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="3Vt-a9-egQ"/>
-                        <constraint firstAttribute="width" constant="50" id="Qf0-ST-F7x"/>
-                        <constraint firstAttribute="height" constant="50" id="djj-By-35S"/>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="50" id="ogb-Bq-DA5"/>
-                    </constraints>
-                    <state key="normal" image="window_54_close"/>
-                    <connections>
-                        <action selector="closeViewEvent:" destination="iN0-l3-epB" eventType="touchUpInside" id="3MR-h9-Ogx"/>
-                    </connections>
-                </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Zk-Ba-xiP">
-                    <rect key="frame" x="43.5" y="252" width="288" height="99"/>
+                    <rect key="frame" x="43.5" y="232" width="288" height="99"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="99" id="Don-4z-VRl"/>
                         <constraint firstAttribute="width" constant="288" id="N74-yV-Jqe"/>
@@ -52,7 +38,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ua-8I-xRi">
-                    <rect key="frame" x="29" y="260" width="6" height="6"/>
+                    <rect key="frame" x="29" y="240" width="6" height="6"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="6" id="0Ij-it-9M3"/>
@@ -66,7 +52,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PaK-Du-DYh">
-                    <rect key="frame" x="29" y="323" width="6" height="6"/>
+                    <rect key="frame" x="29" y="303" width="6" height="6"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="6" id="Cb6-Bo-F3b"/>
@@ -80,23 +66,17 @@
                 <constraint firstItem="4Zk-Ba-xiP" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="7k8-mr-HGW"/>
                 <constraint firstItem="0Gs-fT-WjF" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Mbn-Pf-ce0"/>
                 <constraint firstItem="PaK-Du-DYh" firstAttribute="top" secondItem="9ua-8I-xRi" secondAttribute="bottom" constant="57" id="T4n-Z4-RDL"/>
-                <constraint firstItem="kKz-bX-ufG" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="19" id="T70-AL-ZxG"/>
                 <constraint firstItem="4Zk-Ba-xiP" firstAttribute="leading" secondItem="PaK-Du-DYh" secondAttribute="trailing" constant="8.5" id="d8B-pG-MJf"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="kKz-bX-ufG" secondAttribute="trailing" constant="6" id="dBq-fa-8FU"/>
                 <constraint firstItem="0Gs-fT-WjF" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="183" id="jVe-zx-5Uc"/>
                 <constraint firstItem="9ua-8I-xRi" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="240" id="jxg-wm-Vuy"/>
                 <constraint firstItem="4Zk-Ba-xiP" firstAttribute="top" secondItem="0Gs-fT-WjF" secondAttribute="bottom" constant="33" id="xvD-Qb-tCh"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
-                <outlet property="closeButton" destination="kKz-bX-ufG" id="Ff2-Vy-FYh"/>
                 <outlet property="lab1" destination="0Gs-fT-WjF" id="Lxx-e2-4k5"/>
                 <outlet property="lab2" destination="4Zk-Ba-xiP" id="AmY-wB-hU5"/>
             </connections>
             <point key="canvasLocation" x="53.600000000000001" y="48.125937031484263"/>
         </view>
     </objects>
-    <resources>
-        <image name="window_54_close" width="16" height="16"/>
-    </resources>
 </document>
