--- a/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWVotingListView.xib
+++ b/UnionSquare.iOS/ELA/found/SuperPoint/view/HMWVotingListView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,7 +15,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nu0-9G-7hP">
-                    <rect key="frame" x="3" y="30" width="369" height="100"/>
+                    <rect key="frame" x="3" y="10" width="369" height="100"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全网投票占比" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fPP-tC-Hl1">
                             <rect key="frame" x="0.0" y="12" width="123" height="32"/>
@@ -108,7 +106,7 @@
                     </constraints>
                 </view>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="TOh-zh-fnS">
-                    <rect key="frame" x="-3" y="183" width="375" height="484"/>
+                    <rect key="frame" x="-3" y="172" width="375" height="495"/>
                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="duJ-tz-tS9">
                         <size key="itemSize" width="50" height="50"/>
@@ -118,7 +116,7 @@
                     </collectionViewFlowLayout>
                 </collectionView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y1c-AI-kpu">
-                    <rect key="frame" x="4" y="150" width="4" height="15"/>
+                    <rect key="frame" x="4" y="138" width="4" height="15"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="15" id="ZrG-Qh-u3V"/>
@@ -126,18 +124,18 @@
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="参选节点列表" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pex-rX-tQF">
-                    <rect key="frame" x="16" y="149" width="86" height="17"/>
+                    <rect key="frame" x="16" y="137" width="86" height="17"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MKV-zY-czg">
-                    <rect key="frame" x="325" y="132.5" width="50" height="50"/>
+                    <rect key="frame" x="325" y="120.5" width="50" height="50"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="3ra-Zg-N1d"/>
                         <constraint firstAttribute="height" constant="50" id="gJL-HE-BdD"/>
                     </constraints>
-                    <state key="normal" image="vote_switch_list"/>
+                    <state key="normal" image="list.dash" catalog="system"/>
                     <connections>
                         <action selector="modifyTheListMode:" destination="iN0-l3-epB" eventType="touchUpInside" id="Sf6-Ic-Btu"/>
                     </connections>
@@ -191,7 +189,6 @@
         </view>
     </objects>
     <resources>
-        <image name="multi_import_btn" width="22" height="22"/>
-        <image name="vote_switch_list" width="22" height="22"/>
+        <image name="list.dash" catalog="system" width="64" height="42"/>
     </resources>
 </document>
